* Resolve {bz: 1473} by adding proper overflow:hidden to tag names.
git-svn-id: https://repo.socialtext.net:8999/svn/socialtext/trunk@10543 593ce9bc-2028-0410-bb98-c566b643a948

--- a/nlw/share/skin/s3/css/screen.css
+++ b/nlw/share/skin/s3/css/screen.css
@@ -1974,3 +1974,13 @@ table.widgetUserPrefs td.widgetUserPrefsButtons {
     text-align: center;
     padding-top: 5px;
 }
+
+#st-tags-listing a.tag_name {
+    display: block;
+    padding-top: 2px;
+    float: left;
+    max-width: 90%;
+    clear: left;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
